# b1e55ed

./: .dockerignore  .env.template  .gitignore  .markdownlint.json  CONTRIBUTING.md  DOCKER.md  Dockerfile  GENESIS.md  Makefile  README.md  ROADMAP.md  SKILL.md  crons.json  docker-compose.yml  pyproject.toml  setup_operator.sh  skill.json
.b1e55ed/: AGENTS.md  SOUL.md  settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  scripts.yml
api/: auth.py  auth_kill_switch.py  deps.py  errors.py  main.py
api/routes/: __init__.py  brain.py  config.py  contributors.py  health.py  karma.py  kill_switch.py  positions.py  producers.py  regime.py  signals.py
api/schemas/: __init__.py  brain.py  common.py  positions.py  signals.py
config/: crons.json  default.yaml
config/presets/: balanced.yaml  conservative.yaml  degen.yaml
corpus/: conviction.md  mistakes.md  patterns.md  sources.md  theses.md
dashboard/: __init__.py  app.py  contributors.py  identity.py  producers.py  webhooks.py
dashboard/routes/: positions.py
docs/: DASHBOARD_DESIGN_SPEC.md  FORGE_SPEC.md  HISTORY.md  OPERATOR_SPRINT_PLAN.md  REVIEW_SPRINT_PLAN.md  api-reference.md  architecture.md  authority-model.md  backtest.md  cli-reference.md  configuration.md  contributing.md  contributors.md  crypto-primitives.md  dependencies-code.md  dependencies-docs.md  deployment.md  developers.md  eas-integration.md  getting-started.md  learning-loop.md  openclaw-integration.md  producers.md  security.md  tutorial-agent-producer.md
engine/: __init__.py  cli.py  cli_keys.py
samples/: README.md
scripts/: check_brand.sh  install.sh  setup.sh  setup_operator.sh  validate_code_deps.py  validate_doc_deps.sh
tests/: conftest.py  smoke.py
user/: CRITICAL.md.template  MEMORY.md.template  TOOLS.md.template  USER.md.template
(+226 files in other folders)
